fix zoom div covering sliders

--- a/clock.css
+++ b/clock.css
@@ -14,12 +14,12 @@
 }
 
 #faceContainer {
-    left: 0px;
-    top: 0px;
+    left: 200px;
+    top: 200px;
     position: absolute;
 
-    min-width: 1000px;
-    min-height: 1000px;
+    min-width: 600px;
+    min-height: 600px;
 
     /* center vertically and horizontally */
     display: flex;
